--- a/. github/流程/main.yml
+++ b/. github/流程/main.yml
@@ -125,7 +125,7 @@ jobs:
       - name: 'Set release filename'
         shell: bash
         run: |
-          FILENAME="OBS-Virtualcam-${{ env.GIT_TAG }}-Windows"
+          FILENAME="OBS-Rtspserver-${{ env.GIT_TAG }}-Windows"
           echo "::set-env name=WIN_FILENAME::$FILENAME"
       - name: 'Package obs-rtspserver'
         working-directory: ${{ github.workspace }}/obs-rtspserver
