--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,16 +18,16 @@ jobs:
     steps:
       - name: 'Add msbuild to PATH'
         uses: microsoft/setup-msbuild@v1.0.0
-      - name: 'Checkout'
-        uses: actions/checkout@v2
-        with:
-          path: ${{ github.workspace }}/obs-rtspserver
-          submodules: 'recursive'
       - name: 'Checkout OBS'
         uses: actions/checkout@v2
         with:
           repository: obsproject/obs-studio
           path: ${{ github.workspace }}/obs-studio
+          submodules: 'recursive'
+      - name: 'Checkout'
+        uses: actions/checkout@v2
+        with:
+          path: ${{ github.workspace }}/obs-studio/plugins/obs-rtspserver
           submodules: 'recursive'
       - name: 'Get OBS-Studio git info'
         shell: bash
@@ -45,7 +45,7 @@ jobs:
           git submodule update
       - name: 'Get obs-rtspserver git info'
         shell: bash
-        working-directory: ${{ github.workspace }}/obs-rtspserver
+        working-directory: ${{ github.workspace }}/plugins/obs-rtspserver
         run: |
           git fetch --prune --unshallow
           echo ::set-env name=GIT_BRANCH::${{ github.event.pull_request.head.ref }}
@@ -73,15 +73,15 @@ jobs:
         if: steps.build-cache-obs-32.outputs.cache-hit != 'true'
         working-directory: ${{ github.workspace }}/obs-studio
         run: |
+          echo "add_subdirectory(obs-rtspserver) >> .\plugins\CMakeLists.txt"
           mkdir .\build32
           cd .\build32
           cmake -G "${{ env.CMAKE_GENERATOR }}" -A Win32 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc2017" -DDepsPath="${{ github.workspace }}\cmbuild\deps\win32" -DBUILD_CAPTIONS=YES -DCOPIED_DEPENDENCIES=NO -DCOPY_DEPENDENCIES=YES ..
-      - name: 'Build OBS-Studio 32-bit'
+      - name: 'Build obs-rtspserver 32-bit'
         if: steps.build-cache-obs-32.outputs.cache-hit != 'true'
         working-directory: ${{ github.workspace }}/obs-studio
         run: |
-          msbuild /m /p:Configuration=RelWithDebInfo .\build32\libobs\libobs.vcxproj
-          msbuild /m /p:Configuration=RelWithDebInfo .\build32\UI\obs-frontend-api\obs-frontend-api.vcxproj
+          msbuild /m /p:Configuration=RelWithDebInfo .\build32\plugins\obs-rtspserver\obs-rtspserver.vcxproj
       - name: 'Restore OBS 64-bit build v${{ env.OBS_GIT_TAG }} from cache'
         id: build-cache-obs-64
         uses: actions/cache@v1
@@ -96,33 +96,15 @@ jobs:
         if: steps.build-cache-obs-64.outputs.cache-hit != 'true'
         working-directory: ${{ github.workspace }}/obs-studio
         run: |
+          echo "add_subdirectory(obs-rtspserver) >> .\plugins\CMakeLists.txt"
           mkdir .\build64
           cd .\build64
           cmake -G "${{ env.CMAKE_GENERATOR }}" -A x64 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc2017_64" -DDepsPath="${{ github.workspace }}\cmbuild\deps\win64" -DBUILD_CAPTIONS=YES -DCOPIED_DEPENDENCIES=NO -DCOPY_DEPENDENCIES=YES ..
-      - name: 'Build OBS-Studio 64-bit'
+      - name: 'Build obs-rtspserver 64-bit'
         if: steps.build-cache-obs-64.outputs.cache-hit != 'true'
         working-directory: ${{ github.workspace }}/obs-studio
         run: |
-          msbuild /m /p:Configuration=RelWithDebInfo .\build64\libobs\libobs.vcxproj
-          msbuild /m /p:Configuration=RelWithDebInfo .\build64\UI\obs-frontend-api\obs-frontend-api.vcxproj
-      - name: 'Configure obs-rtspserver 64-bit'
-        working-directory: ${{ github.workspace }}/obs-rtspserver
-        run: |
-          mkdir .\build64
-          cd .\build64
-          cmake -G "${{ env.CMAKE_GENERATOR }}" -A x64 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc2017_64" -DDepsPath="${{ github.workspace }}\cmbuild\deps\win64" -DLibObs_DIR="${{ github.workspace }}\obs-studio\build64\libobs" -DLIBOBS_INCLUDE_DIR="${{ github.workspace }}\obs-studio\libobs" -DLIBOBS_LIB="${{ github.workspace }}\obs-studio\build64\libobs\RelWithDebInfo\obs.lib" -DOBS_FRONTEND_LIB="${{ github.workspace }}\obs-studio\build64\UI\obs-frontend-api\RelWithDebInfo\obs-frontend-api.lib" -DPTHREAD_LIB="${{ github.workspace }}\obs-studio\build64\deps\w32-pthreads\RelWithDebInfo\w32-pthreads.lib" ..
-      - name: 'Configure obs-virtual-cam 32-bit'
-        working-directory: ${{ github.workspace }}/obs-rtspserver
-        run: |
-          mkdir .\build32
-          cd .\build32
-          cmake -G "${{ env.CMAKE_GENERATOR }}" -A Win32 -DCMAKE_SYSTEM_VERSION="${{ env.CMAKE_SYSTEM_VERSION }}" -DQTDIR="${{ github.workspace }}\cmbuild\QT\${{ env.QT_VERSION }}\msvc2017" -DDepsPath="${{ github.workspace }}\cmbuild\deps\win32" -DLibObs_DIR="${{ github.workspace }}\obs-studio\build32\libobs" -DLIBOBS_INCLUDE_DIR="${{ github.workspace }}\obs-studio\libobs" -DLIBOBS_LIB="${{ github.workspace }}\obs-studio\build32\libobs\RelWithDebInfo\obs.lib" -DOBS_FRONTEND_LIB="${{ github.workspace }}\obs-studio\build32\UI\obs-frontend-api\RelWithDebInfo\obs-frontend-api.lib" -DPTHREAD_LIB="${{ github.workspace }}\obs-studio\build32\deps\w32-pthreads\RelWithDebInfo\w32-pthreads.lib"  ..     
-      - name: 'Build obs-rtspserver 64-bit'
-        working-directory: ${{ github.workspace }}/obs-rtspserver
-        run: msbuild /m /p:Configuration=RelWithDebInfo .\build64\obs-rtspserver.sln
-      - name: 'Build obs-virtual-cam 32-bit'
-        working-directory: ${{ github.workspace }}/obs-rtspserver
-        run: msbuild /m /p:Configuration=RelWithDebInfo .\build32\obs-rtspserver.sln
+          msbuild /m /p:Configuration=RelWithDebInfo .\build64\plugins\obs-rtspserver\obs-rtspserver.vcxproj
       - name: 'Set release filename'
         shell: bash
         run: |
