--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
           repository: obsproject/obs-studio
           path: ${{ github.workspace }}/obs-studio
           submodules: 'recursive'
-      - name: 'Checkout'
+      - name: 'Checkout obs-rtspserver'
         uses: actions/checkout@v2
         with:
           path: ${{ github.workspace }}/obs-studio/plugins/obs-rtspserver
@@ -112,41 +112,41 @@ jobs:
           FILENAME="OBS-Rtspserver-${{ env.GIT_TAG }}-Windows"
           echo "::set-env name=WIN_FILENAME::$FILENAME"
       - name: 'Package obs-rtspserver'
-        working-directory: ${{ github.workspace }}/obs-rtspserver
+        working-directory: ${{ github.workspace }}
         run: |
           mkdir build-package\obs-plugins\64bit
           mkdir build-package\obs-plugins\32bit
           mkdir build-package\data\obs-plugins\obs-rtspserver\locale\
           mkdir build-package\bin\64bit
           mkdir build-package\bin\32bit
-          robocopy ${{ github.workspace }}\cmbuild\deps\win32\bin\ .\build-package\bin\32bit\ avutil-56.dll swscale-5.dll
-          robocopy .\build64\src\virtual-output\RelWithDebInfo .\build-package\obs-plugins\64bit\ obs-rtspserver.dll obs-rtspserver.stripped.pdb
-          robocopy .\build32\src\virtual-output\RelWithDebInfo .\build-package\obs-plugins\32bit\ obs-rtspserver.dll obs-rtspserver.stripped.pdb
-          robocopy .\locale\ .\build-package\data\obs-plugins\obs-rtspserver\locale\ *.ini
+          robocopy .\cmbuild\deps\win32\bin\ .\build-package\bin\32bit\ avutil-56.dll swscale-5.dll
+          robocopy .\obs-studio\build64\plugins\obs-rtspserver\RelWithDebInfo .\build-package\obs-plugins\64bit\ obs-rtspserver.dll obs-rtspserver.stripped.pdb
+          robocopy .\obs-studio\build32\plugins\obs-rtspserver\RelWithDebInfo .\build-package\obs-plugins\32bit\ obs-rtspserver.dll obs-rtspserver.stripped.pdb
+          robocopy .\obs-studio\plugins\obs-rtspserver\locale\ .\build-package\data\obs-plugins\obs-rtspserver\locale\ *.ini
           ren .\build-package\obs-plugins\64bit\obs-rtspserver.stripped.pdb obs-rtspserver.pdb
           ren .\build-package\obs-plugins\32bit\obs-rtspserver.stripped.pdb obs-rtspserver.pdb
           mkdir release
           7z a ".\release\${{ env.WIN_FILENAME }}.zip" ".\build-package\*"
       - name: Install NSIS
-        working-directory: ${{ github.workspace }}/obs-rtspserver
+        working-directory: ${{ github.workspace }}
         run: |
           Invoke-Expression (New-Object System.Net.WebClient).DownloadString('https://get.scoop.sh')
           scoop bucket add extras
           scoop install nsis
       - name: Build obs-rtspserver installer
-        working-directory: ${{ github.workspace }}/obs-rtspserver
+        working-directory: ${{ github.workspace }}
         run: |
           cd installer
           makensis /DVERSION=${{ env.GIT_TAG }} installer.nsi
-#      - name: 'Publish ${{ env.WIN_FILENAME }}.zip'
-#        if: success()
-#        uses: actions/upload-artifact@v2-preview
-#        with:
-#          name: '${{ env.GIT_TAG }}-Windows'
-#          path: ${{ github.workspace }}\obs-rtspserver\release\*.zip
-#      - name: 'Publish ${{ env.WIN_FILENAME }}-Windows-Installer.exe'
-#        if: success()
-#        uses: actions/upload-artifact@v2-preview
-#        with:
-#          name: '${{ env.GIT_TAG }}-Windows-Installer'
-#          path: ${{ github.workspace }}\obs-rtspserver\build-package\*.exe*/
+      - name: 'Publish ${{ env.WIN_FILENAME }}.zip'
+        if: success()
+        uses: actions/upload-artifact@v2-preview
+        with:
+          name: '${{ env.GIT_TAG }}-Windows'
+          path: ${{ github.workspace }}\release\*.zip
+      - name: 'Publish ${{ env.WIN_FILENAME }}-Windows-Installer.exe'
+        if: success()
+        uses: actions/upload-artifact@v2-preview
+        with:
+          name: '${{ env.GIT_TAG }}-Windows-Installer'
+          path: ${{ github.workspace }}\build-package\*.exe
