--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,11 +120,9 @@ jobs:
           mkdir build-package\bin\64bit
           mkdir build-package\bin\32bit
           robocopy .\cmbuild\deps\win32\bin\ .\build-package\bin\32bit\ avutil-56.dll swscale-5.dll
-          robocopy .\obs-studio\build64\plugins\obs-rtspserver\RelWithDebInfo .\build-package\obs-plugins\64bit\ obs-rtspserver.dll obs-rtspserver.stripped.pdb
-          robocopy .\obs-studio\build32\plugins\obs-rtspserver\RelWithDebInfo .\build-package\obs-plugins\32bit\ obs-rtspserver.dll obs-rtspserver.stripped.pdb
+          robocopy .\obs-studio\build64\plugins\obs-rtspserver\RelWithDebInfo .\build-package\obs-plugins\64bit\ obs-rtspserver.dll obs-rtspserver.pdb
+          robocopy .\obs-studio\build32\plugins\obs-rtspserver\RelWithDebInfo .\build-package\obs-plugins\32bit\ obs-rtspserver.dll obs-rtspserver.pdb
           robocopy .\obs-studio\plugins\obs-rtspserver\locale\ .\build-package\data\obs-plugins\obs-rtspserver\locale\ *.ini
-          ren .\build-package\obs-plugins\64bit\obs-rtspserver.stripped.pdb obs-rtspserver.pdb
-          ren .\build-package\obs-plugins\32bit\obs-rtspserver.stripped.pdb obs-rtspserver.pdb
           mkdir release
           7z a ".\release\${{ env.WIN_FILENAME }}.zip" ".\build-package\*"
       - name: Install NSIS
