--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -126,8 +126,8 @@ jobs:
           robocopy .\obs-studio\build64\plugins\obs-rtspserver\RelWithDebInfo\ .\build-package\obs-plugins\64bit\ obs-rtspserver.dll obs-rtspserver.pdb
           robocopy .\obs-studio\build32\plugins\obs-rtspserver\RelWithDebInfo\ .\build-package\obs-plugins\32bit\ obs-rtspserver.dll obs-rtspserver.pdb
           robocopy .\obs-studio\plugins\obs-rtspserver\locale\ .\build-package\data\obs-plugins\obs-rtspserver\locale\ *.ini
-          robocopy .\obs-studio\plugins\obs-rtspserver\ .\build-package\ LICENSE
-          robocopy .\obs-studio\plugins\obs-rtspserver\installer\ .\build-package\ installer.nsi obs.ico
+          robocopy .\obs-studio\plugins\obs-rtspserver\ .\installer\ LICENSE
+          robocopy .\obs-studio\plugins\obs-rtspserver\installer\ .\installer\ installer.nsi obs.ico
           mkdir release
           7z a ".\release\${{ env.WIN_FILENAME }}.zip" ".\build-package\*"
 #      - name: Build obs-rtspserver installer
