--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -134,12 +134,6 @@ jobs:
         with:
           name: '${{ env.GIT_TAG }}-Windows'
           path: ${{ github.workspace }}\release\*.zip
-      - name: Upload ${{ env.WIN_FILENAME }}.zip to release
-        uses: JasonEtco/upload-to-release@master
-        with:
-          args: ${{ env.GIT_TAG }}-Windows.zip application/zip
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Build obs-rtspserver installer
         working-directory: ${{ github.workspace }}\installer
         run: makensis /DVERSION=${{ env.GIT_TAG }} .\installer.nsi
@@ -149,9 +143,20 @@ jobs:
         with:
           name: '${{ env.GIT_TAG }}-Windows-Installer'
           path: ${{ github.workspace }}\build-package\*.exe
+  upload:
+    name: 'Upload to release'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Upload ${{ env.WIN_FILENAME }}.zip to release
+        uses: JasonEtco/upload-to-release@master
+        with:
+          args: ${{ env.GIT_TAG }}-Windows.zip application/zip
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - name: Upload obs-rtspserver installer to release
         uses: JasonEtco/upload-to-release@master
         with:
           args: ${{ env.GIT_TAG }}-Windows-Installer.zip application/zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      
