--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,10 @@ name: 'CI Windows On-Push'
 
 on:
   push:
-    branches:
-      - master
+    paths-ignore:
+      - 'docs/**'
+    tags:
+      - '[23].[0-9]+.[0-9]+'
 
 jobs:
   windows:
@@ -156,4 +158,45 @@ jobs:
         with:
           name: '${{ env.GIT_TAG }}-Windows-Installer'
           path: ${{ github.workspace }}\build-package\*.exe
+
+ make-release:
+    name: 'Create and upload release'
+    runs-on: [ubuntu-latest]
+    needs: [windows]
+    steps:
+      - name: 'Get the version'
+        shell: bash
+        id: get_version
+        run: |
+          echo ::set-env name=TAG_VERSION::${GITHUB_REF/refs\/tags\//}
+      - name: 'Create Release'
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ env.TAG_VERSION }}
+          release_name: obs-rtspserver ${{ env.TAG_VERSION }}
+          draft: false
+          prerelease: false
+      - name: 'Download release artifacts'
+        uses: actions/download-artifact@v2-preview
+      - name: 'Upload Windows .zip artifact to release'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ github.workspace }}/${{ env.TAG_VERSION }}-Windows/obs-rtspserver-${{ env.TAG_VERSION }}-Windows.zip
+          asset_name: obs-rtspserver-${{ env.TAG_VERSION }}-Windows.zip
+          asset_content_type: application/zip
+      - name: 'Upload Windows .exe artifact to release'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          asset_path: ${{ github.workspace }}/${{ env.TAG_VERSION }}-Windows-Installer/obs-rtspserver-${{ env.TAG_VERSION }}-Windows-installer.exe
+          asset_name: obs-rtspserver-${{ env.TAG_VERSION }}-Windows-Installer.exe
+          asset_content_type: application/zip
       
