--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,11 +2,13 @@
 name: 'CI Windows Release'
 
 on:
-  push:
-    paths-ignore:
-      - 'docs/**'
-    tags:
-      - '[0-9]+.[0-9]+.[0-9]+'
+    release:
+      types: [published]
+#    push:
+#    paths-ignore:
+#      - 'docs/**'
+#    tags:
+#      - '[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   windows:
@@ -150,7 +152,7 @@ jobs:
           path: ${{ github.workspace }}\build-package\*.exe
 
   make-release:
-    name: 'Create and upload release'
+    name: 'Upload release'
     runs-on: [ubuntu-latest]
     needs: [windows]
     steps:
@@ -159,16 +161,16 @@ jobs:
         id: get_version
         run: |
           echo ::set-env name=TAG_VERSION::${GITHUB_REF/refs\/tags\//}
-      - name: 'Create Release'
-        id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          tag_name: ${{ env.TAG_VERSION }}
-          release_name: obs-rtspserver ${{ env.TAG_VERSION }}
-          draft: false
-          prerelease: false
+#      - name: 'Create Release'
+#        id: create_release
+#         uses: actions/create-release@v1
+#        env:
+#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#        with:
+#          tag_name: ${{ env.TAG_VERSION }}
+#          release_name: obs-rtspserver ${{ env.TAG_VERSION }}
+#          draft: false
+#          prerelease: false
       - name: 'Download release artifacts'
         uses: actions/download-artifact@v2-preview
       - name: 'Upload Windows .zip artifact to release'
@@ -176,7 +178,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ github.event.upload_url }}
           asset_path: ${{ github.workspace }}/${{ env.TAG_VERSION }}-windows/obs-rtspserver-${{ env.TAG_VERSION }}-windows.zip
           asset_name: obs-rtspserver-${{ env.TAG_VERSION }}-windows.zip
           asset_content_type: application/zip
@@ -185,7 +187,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: ${{ github.event.upload_url }}
           asset_path: ${{ github.workspace }}/${{ env.TAG_VERSION }}-windows-installer/obs-rtspserver-${{ env.TAG_VERSION }}-windows-installer.exe
           asset_name: obs-rtspserver-${{ env.TAG_VERSION }}-windows-installer.exe
           asset_content_type: application/zip
