--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,11 +133,14 @@ jobs:
     steps:
       - name: 'Install prerequisite'
         run: |
-          sudo apt-get install -y libX11-dev mesa-libGL-dev libv4l-dev \
-          pulseaudio-libs-dev x264-dev freetype-dev \
-          fontconfig-dev libXcomposite-dev libXinerama-dev \
-          qt5-qtbase-dev qt5-qtx11extras-dev libcurl-dev \
-          systemd-dev ffmpeg ffmpeg-dev
+         sudo apt-get install \
+           build-essential checkinstall cmake git libmbedtls-dev libasound2-dev libavcodec-dev libavdevice-dev \
+           libavfilter-dev libavformat-dev libavutil-dev libcurl4-openssl-dev libfdk-aac-dev libfontconfig-dev \
+           libfreetype6-dev libgl1-mesa-dev libjack-jackd2-dev libjansson-dev libluajit-5.1-dev libpulse-dev \
+           libqt5x11extras5-dev libspeexdsp-dev libswresample-dev libswscale-dev libudev-dev libv4l-dev \
+           libvlc-dev libx11-dev libx264-dev libxcb-shm0-dev libxcb-xinerama0-dev libxcomposite-dev \
+           libxinerama-dev pkg-config python3-dev qtbase5-dev libqt5svg5-dev swig libxcb-randr0-dev \
+           libxcb-xfixes0-dev libx11-xcb-dev libxcb1-dev
       - name: 'Checkout OBS'
         uses: actions/checkout@v2
         with:
