--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -133,6 +133,7 @@ jobs:
     steps:
       - name: 'Install prerequisite'
         run: |
+         sudo apt-get update
          sudo apt-get install \
            build-essential checkinstall cmake git libmbedtls-dev libasound2-dev libavcodec-dev libavdevice-dev \
            libavfilter-dev libavformat-dev libavutil-dev libcurl4-openssl-dev libfdk-aac-dev libfontconfig-dev \
